--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+<link rel="stylesheet" href="https://unp.kg/aos@next/dist/aos.css"/>
 </head>
 <body>
 <div id="root">
 
 </div>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
